--- a/index_udemy.html
+++ b/index_udemy.html
@@ -18,15 +18,16 @@
         <h1>
             <a href="index_udemy.html">
             <figure><img src="img/icon_home.png" alt=""></figure>
-            |</a>
+            </a>
             <a href="index_udemy.html">Erika Rubí</a>
         </h1>
 
         <nav id="ioMenu">
-            <figure id="showMenu" class="ioMenuMovil"><img src="img/menu.png" alt=""></figure>
+            <figure id="showMenu" class="ioMenuMovil">
+            <img src="img/tmenu.png" alt=""></figure>
 
             <div id="card_menu">
-                <figure id="hideMenu"><img src="img/menu.png" alt=""></figure>
+                <figure id="hideMenu" class="ioMenuMovil"><img src="img/texit.png" alt=""></figure>
                 <figure id="logo_menu_cat"><img src="img/cat.jpg" alt=""></figure>
                 <ul>
                     <li><a href="#">Home</a></li>
