desing responsive nav

--- a/index_udemy.html
+++ b/index_udemy.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Erika Rubí</title>
+    <title>Udemy</title>
 
     <script src="js/modernizr-custom.js"></script>
 
@@ -19,7 +19,7 @@
             <a href="index_udemy.html">
             <figure><img src="img/icon_home.png" alt=""></figure>
             </a>
-            <a href="index_udemy.html">Erika Rubí</a>
+            <a href="index_udemy.html">Práctica de Udemy</a>
         </h1>
 
         <nav id="ioMenu">
