--- a/index_udemy.html
+++ b/index_udemy.html
@@ -23,11 +23,14 @@
         </h1>
 
         <nav id="ioMenu">
-            <figure id="showMenu" class="ioMenuMovil">
-            <img src="img/tmenu.png" alt=""></figure>
+            <figure id="showMenu" class="ioMenuMovil" onclick="displayMenu()">
+                <img src="img/tmenu.png" alt="">
+            </figure>
 
             <div id="card_menu">
-                <figure id="hideMenu" class="ioMenuMovil"><img src="img/texit.png" alt=""></figure>
+                <figure id="hideMenu" class="ioMenuMovil" onclick="displayMenu()">
+                    <img src="img/texit.png" alt="">
+                </figure>
                 <figure id="logo_menu_cat"><img src="img/cat.jpg" alt=""></figure>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -44,5 +47,49 @@
         <div id="previa_section"><img src="img/proximoi.png" alt=""></div>
         <div id="next_section"><img src="img/proximoi.png" alt=""></div>
     </header>
+
+    <script>
+        alertSize();
+        function alertSize() {
+            var myWidth = 0, myHeight = 0;
+            if( typeof( window.innerWidth ) == 'number' ) {
+            //No-IE
+            myWidth = window.innerWidth;
+            myHeight = window.innerHeight;
+            } else if( document.documentElement && ( document.documentElement.clientWidth || document.documentElement.clientHeight ) ) {
+            //IE 6+
+            myWidth = document.documentElement.clientWidth;
+            myHeight = document.documentElement.clientHeight;
+            } else if( document.body && ( document.body.clientWidth || document.body.clientHeight ) ) {
+            //IE 4 compatible
+            myWidth = document.body.clientWidth;
+            myHeight = document.body.clientHeight;
+            }
+
+            var display;
+            var card_menu = document.getElementById("card_menu");
+            display = card_menu.style.display;
+            if (myWidth < 767){
+                card_menu.style.display = "none";
+            }
+            else{
+                card_menu.style.display = "block";
+            }
+        }
+
+        function displayMenu(){
+            var display;
+            var card_menu = document.getElementById("card_menu");
+            display = card_menu.style.display;
+
+            if (display == "none"){
+                card_menu.style.display = "block"
+            }
+            else{
+                card_menu.style.display = "none";
+            }
+        }
+    </script>
+
 </body>
 </html>
