--- a/index_udemy.html
+++ b/index_udemy.html
@@ -33,11 +33,12 @@
                 </figure>
                 <figure id="logo_menu_cat"><img src="img/cat.jpg" alt=""></figure>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre mi</a></li>
-                    <li><a href="#">skills</a></li>
-                    <li><a href="#">Portafolio</a></li>
-                    <li><a href="#">Blog</a></li>
+                   <!--Para el siguiente ejemplo los enlaces no van apuntar a ningún sitio pero, lo correcto es crear un html(página) para cada uno-->
+                    <li><a onClick= "navSection('home')" href="#">Home</a></li>
+                    <li><a onClick= "navSection('aboutme')" href="#">Sobre mi</a></li>
+                    <li><a onClick= "navSection('skills')" href="#">skills</a></li>
+                    <li><a onClick= "navSection('portafolio')" href="#">Portafolio</a></li>
+                    <li><a onClick= "navSection('blog')" href="#">Blog</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </div>
@@ -57,6 +58,12 @@
     </div>
 
     <script>
+        var sections = new Array(5);
+        sections[0] = "home";
+        sections[1] = "aboutme";
+        sections[2] = "skills";
+        sections[3] = "portafolio";
+        sections[4] = "blog";
         alertSize();
         function alertSize() {
             var myWidth = 0, myHeight = 0;
@@ -98,13 +105,41 @@
             }
         }
 
+        function setColors (i){
+            var search;
+            var bkgr_body;
+            var bkgr_menu;
+            if (sections [i] == "home"){
+                bkgr_body = "#233d58";
+                bkgr_menu = "#233d58";
+            }
+            else{
+                bkgr_body = "#f1f1f1";
+                bkgr_menu = "#29abe2";
+            }
+            search = document.getElementById(sections[i]);
+            search.style.background = bkgr_body;
+            var menu = document.getElementsByTagName ("header")[0];
+            menu.style.background = bkgr_menu;
+        }
+
+        function navSection(nav){
+
+            var search;
+            var show;
+
+            for (var i=0; i<5; i++){
+                search = document.getElementById(sections[i]);
+                search.style.display = "none";
+
+                if (sections[i] == nav){
+                    search.style.display = "block";
+                    setColors(i);
+                }
+            }
+        }
+
         function displaySection(nav){
-            var sections = new Array(5);
-            sections[0] = "home";
-            sections[1] = "aboutme";
-            sections[2] = "skills";
-            sections[3] = "portafolio";
-            sections[4] = "blog";
 
             var search;
             var show;
@@ -128,17 +163,7 @@
                     break;
                 }
             }
-            if (sections [i] == "home"){
-                bkgr_body = "#233d58";
-                bkgr_menu = "#233d58";
-            }
-            else{
-                bkgr_body = "#f1f1f1";
-                bkgr_menu = "#29abe2";
-            }
-            search.style.background = bkgr_body;
-            var menu = document.getElementsByTagName ("header")[0];
-            menu.style.background = bkgr_menu;
+            setColors(i);
         }
 
     </script>
