Interacción con el formulario

--- a/index_udemy.html
+++ b/index_udemy.html
@@ -39,7 +39,7 @@
                     <li><a onClick= "navSection('skills')" href="#">skills</a></li>
                     <li><a onClick= "navSection('portafolio')" href="#">Portafolio</a></li>
                     <li><a onClick= "navSection('blog')" href="#">Blog</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a onclick="displayFormContact('block')" href="#">Contacto</a></li>
                 </ul>
             </div>
 
@@ -57,9 +57,9 @@
         <section class="slide" id="blog" style="display: none;"></section>
     </div>
 
-    <div id="contac_form">
+    <div id="contact_form">
         <form action="contact.php" id="form1" name="form1" method="post">
-            <div id="close_form"></div>
+            <div id="close_form" onclick="displayFormContact('none')"></div>
             <figure id="logo_mensaje"><img src="iconos/mail-envelope-open1.png" alt=""></figure>
             <p>Dí Hola</p>
 
@@ -72,6 +72,7 @@
             <input type="submit" name="Submit" id="button" value="ENVIAR" />
         </form>
     </div>
+    <div id="contact_button" onclick="displayFormContact('block')"></div>
 
     <script>
         var sections = new Array(5);
@@ -180,6 +181,11 @@
                 }
             }
             setColors(i);
+        }
+
+        function displayFormContact(status){
+            var form = document.getElementById("contact_form");
+            form.style.display = status;
         }
 
     </script>
