página de inicio (sliderhome)

--- a/index_udemy.html
+++ b/index_udemy.html
@@ -50,7 +50,22 @@
     </header>
 
     <div id="slider">
-        <section class="slide" id="home" style="display: block;"></section>
+        <section class="slide" id="home" style="display: block;">
+            <div class="mainanimation">
+
+            </div>
+            <div class="mainlogo">
+                <h2>Práctica de Udemy<strong>Diseño Web: HTML & CSS</strong></h2>
+                <figure><img src="img/cat.jpg" alt=""></figure>
+            </div>
+            <div class="buttonspage">
+                <div id="contratame" onclick="displayFormContact('block')">CONTRÁTAME</div>
+                <a href="/docs/Aprendiendo_UML_24_horas.pdf">DESCARGAR LIBRO DE PRUEBA</a>
+            </div>
+        </section>
+
+
+
         <section class="slide" id="aboutme" style="display: none;"></section>
         <section class="slide" id="skills" style="display: none;"></section>
         <section class="slide" id="portafolio" style="display: none;"></section>
