botones responsive design

--- a/index_udemy.html
+++ b/index_udemy.html
@@ -60,7 +60,7 @@
             </div>
             <div class="buttonspage">
                 <div id="contratame" onclick="displayFormContact('block')">CONTRÁTAME</div>
-                <a href="/docs/Aprendiendo_UML_24_horas.pdf">DESCARGAR LIBRO DE PRUEBA</a>
+                <a href="/docs/Aprendiendo_UML_24_horas.pdf">DESCARGAR PRUEBA</a>
             </div>
         </section>
 
