Creación del Footer

--- a/index_udemy.html
+++ b/index_udemy.html
@@ -60,12 +60,9 @@
             </div>
             <div class="buttonspage">
                 <div id="contratame" onclick="displayFormContact('block')">CONTRÁTAME</div>
-                <a href="/docs/Aprendiendo_UML_24_horas.pdf">DESCARGAR PRUEBA</a>
+                <a href="docs/Aprendiendo_UML_24_horas.pdf" target="_blank">DESCARGAR PRUEBA</a>
             </div>
         </section>
-
-
-
         <section class="slide" id="aboutme" style="display: none;"></section>
         <section class="slide" id="skills" style="display: none;"></section>
         <section class="slide" id="portafolio" style="display: none;"></section>
@@ -88,6 +85,17 @@
         </form>
     </div>
     <div id="contact_button" onclick="displayFormContact('block')"></div>
+
+    <footer>
+        <div class="rrss">
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+        </div>
+        <p>© 2023 Reservados todos los derechos | Privacity Policy</p>
+
+    </footer>
 
     <script>
         var sections = new Array(5);
