--- a/index_udemy.html
+++ b/index_udemy.html
@@ -52,7 +52,7 @@
     <div id="slider">
         <section class="slide" id="home" style="display: block;">
             <div class="mainanimation">
-
+                <div id="particles-js"></div>
             </div>
             <div class="mainlogo">
                 <h2>Práctica de Udemy<strong>Diseño Web: HTML & CSS</strong></h2>
@@ -97,6 +97,8 @@
 
     </footer>
 
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
     <script>
         var sections = new Array(5);
         sections[0] = "home";
